--- a/tdsm-mysql-connector/tdsm-mysql-connector.csproj
+++ b/tdsm-mysql-connector/tdsm-mysql-connector.csproj
@@ -37,6 +37,9 @@
     <Reference Include="tdsm">
       <HintPath>..\Binaries\tdsm.exe</HintPath>
     </Reference>
+    <Reference Include="TDSM.API">
+      <HintPath>..\Binaries\TDSM.API.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -72,11 +75,5 @@
     <EmbeddedResource Include="Procedures\Files\RemoveNodeFromUser.sql" />
     <EmbeddedResource Include="Procedures\Files\UserGroupList.sql" />
     <EmbeddedResource Include="Procedures\Files\UserNodes.sql" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\tdsm-api\tdsm-api.csproj">
-      <Project>{A1F792B2-5D80-4DE4-B5DB-7A05DBEABD60}</Project>
-      <Name>tdsm-api</Name>
-    </ProjectReference>
   </ItemGroup>
 </Project>
