--- a/tdsm-api/tdsm-api.csproj
+++ b/tdsm-api/tdsm-api.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Callbacks\Utilities.cs" />
     <Compile Include="Data\IDataConnector.cs" />
     <Compile Include="Data\AuthenticatedUsers.cs" />
+    <Compile Include="Steam\Steamworks.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -204,4 +205,7 @@
   <ItemGroup />
   <ItemGroup />
   <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Steam\" />
+  </ItemGroup>
 </Project>
