--- a/tdsm-patcher/additional.config
+++ b/tdsm-patcher/additional.config
@@ -37,8 +37,8 @@ cheat-detection=true
 # Server Side Characters (SSC)
 # Allows the server to store and use character files instead of letting the client. Can be used to prevent cross-world contamination or cheating.
 # NOTE: Not Implemented Yet!
-# [true|false] Default: true
-server-side-characters=true
+# [NONE|AUTH|UUID] Default: true
+server-side-characters=AUTH
 
 # DEVELOPER config. This is to disable TDSM starting it's own custom server implementation.
 # Set to false to use Re-Logic server code.
