--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -45,7 +45,8 @@
 #password=p@55w0rd
 
 #Set the message of the day
-#motd=Please don’t cut the purple trees!
+#motd=Welcome to a TDSM Rebind Server!
+         ~ tdsm.org ~
 
 #Sets the folder where world files will be stored
 #If your server is running linux make sure to use forward slashes for your directory.
