Alterations to config

--- a/tdsm-patcher/additional.config
+++ b/tdsm-patcher/additional.config
@@ -1,4 +1,4 @@
-﻿#=======================================================================
+﻿#================================================================
 #================================================================
 #				   Additional TDSM configuration
 #================================================================
@@ -34,17 +34,17 @@ heartbeat=true
 # [true|false] Default: true
 cheat-detection=true
 
+# ============================================
+#                SERVER SIDE CHARACTERS
+# ============================================
+
 # Server Side Characters (SSC)
 # Allows the server to store and use character files instead of letting the client. Can be used to prevent cross-world contamination or cheating.
-# NOTE: Not Implemented Yet!
-# [NONE|AUTH|UUID
-] Default: true
+# [NONE|AUTH|UUID] Default: AUTH
+#	NONE	= No server side characters
+#	AUTH	= Player data is based upon player name and password
+#	UUID	= Use the player UUID - Not recommended as a player may change this
 server-side-characters=AUTH
-
-# DEVELOPER config. This is to disable TDSM starting it's own custom server implementation.
-# Set to false to use Re-Logic server code.
-# [true|false] Default: true
-tdsm-server-core=true
 
 # ============================================
 #                SERVER LIST
@@ -56,7 +56,7 @@ tdsm-server-core=true
 # [true|false] Default: true
 #server-list=true
 
-# The name of this server on the server list.
+# The name of this server to appear on the server list.
 # Requirement: server-list=true
 # This option CANNOT be blank.
 server-list-name=TDSM Server
@@ -90,7 +90,7 @@ rcon-bind-address=127.0.0.1:7023
 # The address that the web server should listen on.
 # To disable simply comment the line out.
 # If you change the port please ensure you change the META TAG tdsm:port in /WebInterface/Files/index.html
-# NOTE: Web server is still in development and is disabled in build 2b.
+# NOTE: Web server is still in development and is disabled internally.
 web-server-bind-address=127.0.0.1:8448
 
 # Set to false if you wish to use another application to serve HTML files (such as nginx or apache)
@@ -108,9 +108,6 @@ web-server-provider=TDSM Rebind Server Host
 # These settings apply when you use a plugin data connector 
 # such as tdsm-sqlite-connector. These plugins handle how data
 # is stored. There should only ever be one data connector.
-#
-# NOTE: These functions are not yet functional.
-#       It's for an upcoming release.
 #================================================================
 
 # Sets the database to be used.
