SSC health and mana, Storage next up

--- a/tdsm-patcher/additional.config
+++ b/tdsm-patcher/additional.config
@@ -46,6 +46,13 @@ cheat-detection=true
 #	UUID	= Use the player UUID - Not recommended as a player may change this
 server-side-characters=AUTH
 
+# This allows guests to connect with their normal gear.
+# Upon authentication the server will issue them with their registered data, overwriting anything extra they may have brought along.
+# * This is disabled by default so the server has FULL control and prevents misuse of items by guests.
+# * This is also only useful for registering players with their existing inventories/data
+# [true|false] Default: false
+ssc-allow-guest-info=false
+
 # ============================================
 #                SERVER LIST
 # ============================================
