--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -117,13 +117,12 @@ cheat-detection=true
 #	NONE	= No server side characters
 #	AUTH	= Player data is based upon player name and password
 #	UUID	= Use the player UUID - Not recommended as a player may change this
-server-side-characters=AUTH
+server-side-characters=NONE
 
 # This allows guests to connect with their normal gear.
-# Upon authentication the server will issue them with their registered data, overwriting anything extra
-# they mey have brought along.
-# This is disabled by default so the server has FULL control and prevents misuse of items by guests.
-# This is also only useful for registering players with their existing inventories/data
+# Upon authentication the server will issue them with their registered data, overwriting anything extra they may have brought along.
+# * This is disabled by default so the server has FULL control and prevents misuse of items by guests.
+# * This is also only useful for registering players with their existing inventories/data
 # [true|false] Default: false
 ssc-allow-guest-info=false
 
