--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -45,8 +45,7 @@
 #password=p@55w0rd
 
 #Set the message of the day
-#motd=Welcome to a TDSM Rebind Server!
-         ~ tdsm.org ~
+motd=Welcome to a TDSM Rebind Server!\0            ~ tdsm.org ~
 
 #Sets the folder where world files will be stored
 #If your server is running linux make sure to use forward slashes for your directory.
@@ -143,7 +142,7 @@ server-list-name=TDSM Server
 
 # Description of this server on the server list.
 # Requirement: server-list=true
-server-list-desc=This is an example of the description for use in the TDSM Server List.\n\nHello World!
+server-list-desc=This is an example of the description for use in the TDSM Server List.\0\0Hello World!
 
 # Instead of displaying the IP on the server list, opt to display your domain.
 # Requirement: server-list=true
