--- a/tdsm-patcher/additional.config
+++ b/tdsm-patcher/additional.config
@@ -70,7 +70,7 @@ server-list-name=TDSM Server
 
 # Description of this server on the server list.
 # Requirement: server-list=true
-server-list-desc=This is an example of the description for use in the TDSM Server List.\n\nHello World!
+server-list-desc=This is an example of the description for use in the TDSM Server List.\0\0Hello World!
 
 # Instead of displaying the IP on the server list, opt to display your domain.
 # Requirement: server-list=true
