--- a/tdsm-patcher/serverconfig.mods.json
+++ b/tdsm-patcher/serverconfig.mods.json
@@ -19,7 +19,7 @@
 		"OfficialLinePrefix": "#motd=Please ",
 		"Offset": 0,
 		"Modifications": [
-			"#motd=Welcome to a TDSM Rebind Server!\n         ~ tdsm.org ~"
+			"motd=Welcome to a TDSM Rebind Server!\\0            ~ tdsm.org ~"
 		]
 	}
 ]
