Config updating via the API

--- a/tdsm-api/tdsm-api.csproj
+++ b/tdsm-api/tdsm-api.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Data\IDataConnector.cs" />
     <Compile Include="Data\AuthenticatedUsers.cs" />
     <Compile Include="Steam\Steamworks.cs" />
+    <Compile Include="Misc\ConfigUpdater.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
