--- a/tdsm-patcher/additional.config
+++ b/tdsm-patcher/additional.config
@@ -121,4 +121,4 @@ web-server-provider=TDSM Rebind Server Host
 #sqlite=Data Source=database.sqlite;Version=3;
 
 # Connection string for MySQL.
-#mysql=Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;
+mysql=Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;
