--- a/tdsm-api/packages.config
+++ b/tdsm-api/packages.config
@@ -6,8 +6,10 @@
   <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net45" />
+  <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
 </packages>
