Whitelist is now back

--- a/tdsm-patcher/additional.config
+++ b/tdsm-patcher/additional.config
@@ -5,7 +5,7 @@
 #================================================================
 
 # Enable the whitelist. The whitelist is stored in Data\whitelist.txt.
-# [true|false] Default: true
+# [true|false] Default: false
 usewhitelist=true
 
 # Allows communication to the TDSM heartbeat server.
