--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -77,7 +77,7 @@ priority=1
 #================================================================
 
 # Enable the whitelist. The whitelist is stored in Data\whitelist.txt.
-# [true|false] Default: true
+# [true|false] Default: false
 usewhitelist=true
 
 # Allows communication to the TDSM heartbeat server.
