Whitelist disabled by default

--- a/tdsm-patcher/additional.config
+++ b/tdsm-patcher/additional.config
@@ -6,7 +6,7 @@
 
 # Enable the whitelist. The whitelist is stored in Data\whitelist.txt.
 # [true|false] Default: false
-usewhitelist=true
+usewhitelist=false
 
 # Allows communication to the TDSM heartbeat server.
 # Default data sent when heartbeat is enabled: Api version, core version, platform, unique identifier (hashed), npc and item definition version, and how many unique players have connected (only the sum of).
