--- a/tdsm-patcher/additional.config
+++ b/tdsm-patcher/additional.config
@@ -98,7 +98,7 @@ rcon-bind-address=127.0.0.1:7023
 # To disable simply comment the line out.
 # If you change the port please ensure you change the META TAG tdsm:port in /WebInterface/Files/index.html
 # NOTE: Web server is still in development and is disabled internally.
-#web-server-bind-address=http://localhost:8448
+web-server-bind-address=http://localhost:8448
 
 # Set to false if you wish to use another application to serve HTML files (such as nginx or apache)
 # [true|false] Default: true
@@ -122,3 +122,7 @@ web-server-provider=TDSM Rebind Server Host
 
 # Connection string for MySQL.
 mysql=Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;
+
+# Connection string for MSSQL
+# See https://www.connectionstrings.com/sql-server-2012/ for alternates
+#mssql=Server=.\SQLExpress;Database=tdsm;Trusted_Connection=True;
