--- a/TDSM-Patcher/additional.config
+++ b/TDSM-Patcher/additional.config
@@ -35,6 +35,17 @@ heartbeat=true
 cheat-detection=true
 
 # ============================================
+#                REST API
+# ============================================
+# Enables the REST API
+# [true|false] Default: true
+#api=true
+
+# If the web API is enabled this will allow services who ping your server to see what plugins are installed.
+# [true|false] Default: true
+#api-showplugins=true
+
+# ============================================
 #                SERVER SIDE CHARACTERS
 # ============================================
 
