--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -165,7 +165,7 @@ server-list-desc=This is an example of the description for use in the TDSM Serve
 # ============================================
 
 # Address for the Remote Console server to bind to.
-$ Syntax: IP:PORT
+# Syntax: IP:PORT
 # Default: 127.0.0.1:7023
 rcon-bind-address=127.0.0.1:7023
 
@@ -182,7 +182,7 @@ rcon-bind-address=127.0.0.1:7023
 # To disable simply comment the line out.
 # If you change the port please ensure you change the META TAG tdsm:port in /WebInterface/Files/index.html
 # NOTE: Web server is still in development and is disabled internally.
-web-server-bind-address=http://localhost:8448
+web-server-bind-address=http://*:8448
 
 # Set to false if you wish to use another application to serve HTML files (such as nginx or apache)
 # [true|false] Default: true
