SSC fixes, trash items also now save, added SSC save interval

--- a/TDSM-Patcher/additional.config
+++ b/TDSM-Patcher/additional.config
@@ -65,6 +65,11 @@ server-side-characters=NONE
 # [true|false] Default: false
 ssc-allow-guest-info=false
 
+# This is how often character data will be saved to the database.
+# The unit is in seconds
+# Default: 5
+ssc-save-interval=5
+
 # ============================================
 #                SERVER LIST
 # ============================================
