Hooked up backup and log managers to the config

--- a/TDSM-Patcher/additional.config
+++ b/TDSM-Patcher/additional.config
@@ -125,21 +125,22 @@ web-server-serve-files=true
 web-server-provider=TDSM Rebind Server Host
 
 #================================================================
-#================================================================
-#				   			Data storage
-#================================================================
-#================================================================
-# These settings apply when you use a plugin data connector 
-# such as tdsm-sqlite-connector. These plugins handle how data
-# is stored. There should only ever be one data connector.
+#		Data management
 #================================================================
 
-# Sets the database to be used.
-#sqlite=Data Source=database.sqlite;Version=3;
+# Specifies how many of the latest log files to keep.
+# [Disabling: 0] Default: 5
+logs-to-keep=5
 
-# Connection string for MySQL.
-mysql=Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;
+# Specify how often backups are made, in minutes.
+# [Disabling: 0] Default: 60
+backup-interval-min=60
 
-# Connection string for MSSQL
-# See https://www.connectionstrings.com/sql-server-2012/ for alternates
-#mssql=Server=.\SQLExpress;Database=tdsm;Trusted_Connection=True;
+# The backup expiry in minutes. This will delete old backups if they are found to be older.
+# Note: Backups are only deleted after another has been created.
+# [Disabling: 0] Default: 120
+backup-expiry-min=120
+
+# Whether to compress world backups to a .ZIP
+# [true|false] Default: true
+compress-backups=true
