Added the save manager, alteration to backup defaults, using ProgressLoggers for statuses

--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -200,19 +200,23 @@ web-server-provider=TDSM Rebind Server Host
 #		Data management
 #================================================================
 
-# Specifies how many of the latest log files to keep.
-# [Disabling: 0] Default: 5
-logs-to-keep=5
+# Specify how often world saves are made, in minutes.
+# Default: 10
+save-interval-min=10
 
 # Specify how often backups are made, in minutes.
-# [Disabling: 0] Default: 60
-backup-interval-min=60
+# [Disabling: 0] Default: 10
+backup-interval-min=10
 
 # The backup expiry in minutes. This will delete old backups if they are found to be older.
 # Note: Backups are only deleted after another has been created.
-# [Disabling: 0] Default: 120
-backup-expiry-min=120
+# [Disabling: 0] Default: 40
+backup-expiry-min=40
 
 # Whether to compress world backups to a .ZIP
 # [true|false] Default: true
 compress-backups=true
+
+# Specifies how many of the latest log files to keep.
+# [Disabling: 0] Default: 5
+logs-to-keep=5
