Min wait between saves, added CopyBackups option, fixed purging of zip or wld

--- a/TDSM-Patcher/additional.config
+++ b/TDSM-Patcher/additional.config
@@ -145,6 +145,10 @@ backup-expiry-min=40
 # [true|false] Default: true
 compress-backups=true
 
+# This will copy backups from the existing world file instead of saving a fresh backup from memory each time.
+# [true|false] Default: true
+copy-backups=true
+
 # Specifies how many of the latest log files to keep.
 # [Disabling: 0] Default: 5
 logs-to-keep=5
