--- a/Binaries/TerrariaServer.exe.config
+++ b/Binaries/TerrariaServer.exe.config
@@ -15,19 +15,25 @@
 			<add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
 		</DbProviderFactories>
 	</system.data>
-	<!---<entityFramework codeConfigurationType="MySql.Data.Entity.MySqlEFConfiguration, MySql.Data.Entity.EF6">-->
+	<!--<entityFramework codeConfigurationType="MySql.Data.Entity.MySqlEFConfiguration, MySql.Data.Entity.EF6">-->
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
 		<providers>
 			<!--<provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />-->
 			
-      <provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+      		<provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
 			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 			<provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
 		</providers>
 	</entityFramework>
 	<connectionStrings>
+		<!--<add name="terraria_ota" connectionString="Server=.\SQLEXPRESS;Database=tdsm;Trusted_Connection=True;" providerName="System.Data.SqlClient" />-->
 		<add name="terraria_ota" connectionString="Data Source=database.sqlite;" providerName="System.Data.SQLite" />
-		<add name="terraria_ota_" connectionString="Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;" providerName="MySql.Data.MySqlClient" />
+		<!--<add name="terraria_ota" connectionString="Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;" providerName="MySql.Data.MySqlClient" />-->
 	</connectionStrings>
+   <runtime>
+      <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+         <probing privatePath="Libraries"/>
+      </assemblyBinding>
+   </runtime>
 </configuration>
